# BBD

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build_native.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/io/github/romanvht/byedpi/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: proxytest_googlevideo.sites  proxytest_social.sites  proxytest_strategies.list  proxytest_torrents.sites
app/src/main/cpp/: CMakeLists.txt  main.h  native-lib.c
app/src/main/java/io/github/dovecoteescapee/byedpi/: ByeDpiApplication.kt
app/src/main/java/io/github/dovecoteescapee/byedpi/activities/: MainActivity.kt  ToggleActivity.kt
app/src/main/java/io/github/dovecoteescapee/byedpi/core/: ByeDpiProxyPreferences.kt
app/src/main/java/io/github/romanvht/byedpi/: ByeDpiApplication.kt
app/src/main/jni/: Application.mk
app/src/main/res/drawable/: baseline_settings_24.xml  ic_github_36.xml  ic_launcher_monochrome.xml  ic_notification.xml  ic_pin.xml  ic_telegram.xml  ic_toggle.xml  material_alert.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: arrays.xml  attrs.xml  colors.xml  strings.xml  themes.xml
app/src/main/res/values-en/: arrays.xml  strings.xml
app/src/main/res/values-kk/: arrays.xml  strings.xml
app/src/main/res/values-tr/: arrays.xml  strings.xml
app/src/test/java/io/github/romanvht/byedpi/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+170 files in other folders)
