cmake_minimum_required(VERSION 3.22.1)

project(byedpi_native)

add_compile_options(-O3 -ffast-math)

file(GLOB BYE_DPI_SRC byedpi/*.c)
list(REMOVE_ITEM BYE_DPI_SRC ${CMAKE_CURRENT_SOURCE_DIR}/byedpi/win_service.c)

add_library(byedpi SHARED ${BYE_DPI_SRC} native-lib.c)
target_include_directories(byedpi PRIVATE byedpi)

target_compile_options(byedpi PRIVATE -std=c99 -Wall -Wno-unused -Wextra -Wno-unused-parameter -pedantic -Wno-gnu-zero-variadic-macro-arguments)
target_compile_definitions(byedpi PRIVATE ANDROID_APP)

target_link_libraries(byedpi PRIVATE android log)
